# devops-engineer-from-scratch-project-313

./: .dockerignor  Dockerfile  Makefile  README.md  main.py  pyproject.toml  render.yml
.github/workflows/: ci.yml  requirements.txt
test/: test_main.py
